--- a/index.html
+++ b/index.html
@@ -60,13 +60,25 @@
 		<div class="caroussel_wrapper">
 			<div class="main-carousel">
 			  <div class="carousel-cell cell1" onclick="link('https://www.instagram.com/ar/2669005600055612')">
+				  <video playsinline autoplay muted loop> 
+				  	<source src="img/duskus.webm" type="video/webm">
+				  </video>
 			  </div>
 			  <div class="carousel-cell cell2">
+				  <video playsinline autoplay muted loop> 
+				  	<source src="img/san_holo_light.webm" type="video/webm">
+				  </video>
 			  </div>
 			  <div class="carousel-cell cell3" 
 			  onclick="link('https://www.instagram.com/ar/2661651397416055')">
+				  <video playsinline autoplay muted loop> 
+				  	<source src="img/san_holo_vibrant.webm" type="video/webm">
+				  </video>
 			  </div>
 			  <div class="carousel-cell cell4">
+				  <video playsinline autoplay muted loop> 
+				  	<source src="img/block_mirror.webm" type="video/webm">
+				  </video>
 			  </div>
 			</div>
 		</div>
