link to effects

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				  	<source src="img/san_holo_vibrant.webm" type="video/webm">
 				  </video>
 			  </div>
-			  <div class="carousel-cell cell4">
+			  <div class="carousel-cell cell4" onclick="link('https://www.instagram.com/ar/728204517718936')">
 				  <video playsinline autoplay muted loop> 
 				  	<source src="img/block_mirror.webm" type="video/webm">
 				  </video>
