--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<div id="trigger" class="Concept">
 				<h3>Why Invest in AR?</h3>
-				<p>Because, this is the future.<br> <br>You want to be the cool and geeky uncle, not the boring one, right?
+				<p>Because, this is the future.<br> <br>Improve your visibility on the networks and build audience loyalty through an immersive and fun experience! 
 				<br> <br> <br>Well, it's time to jump in the amazing world of AR to make your
 				wildest dreams a reality!</p>
 
@@ -90,7 +90,7 @@
 			<h3>Let's keep in touch!</h3>
 			<p>Let's make a filter for your brand, or whatever you want to make a filter for!</p>
 			<p> <br/> </p>
-			<p class="hoverable">clement@zelter.fr</p>
+			<p class="hoverable">clement.zelter@gmail.com</p>
 			<p class="hoverable"><a class="link_deco2" href="https://www.instagram.com/clemon8/">@clemon8</a></p>
 			
 			<!--<img class="illustration2" src="img/man2.svg" alt="man on a couch with a laptop">-->
