--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<div id="trigger" class="Concept">
 				<h3>Why Invest in AR?</h3>
-				<p>Because, this is the future.<br> <br>Improve your visibility on the networks and build audience loyalty through an immersive and fun experience! 
+				<p>Because, this is the future.<br> <br>Boost your visibility on social networks and build audience engagement through an immersive and fun experience! 
 				<br> <br> <br>Well, it's time to jump in the amazing world of AR to make your
 				wildest dreams a reality!</p>
 
