test  webm vs h264 on safari

--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
 				  	<source src="img/bellecour_choukar.webm" type="video/webm">
 				  </video>
 			  </div>
+			  <div class="carousel-cell cell6" onclick="link('https://www.instagram.com/ar/809351166552969')">
+				  <video playsinline autoplay muted loop>
+				  	<source src="videos/webm/san_find_your_way.webm" type="video/webm">
+					<source src="videos/h264/san_find_your_way.mp4" type="video/mp4">
+				  </video>
+			  </div>
+			
 			</div>
 		</div>
 
@@ -100,11 +107,11 @@
 			<p> <br/> </p>
 			
 			<div class="socials">
-				<button class="social_button">
+				<button onclick="link('https://www.instagram.com/clemon8/')" class="social_button">
 				<p class="hoverable social_icon"><i class="fab fa-instagram"></i></p>
 				</button>
 
-				<button class="social_button">
+				<button onclick="link('mailto:clement.zelter@gmail.com')" class="social_button">
 				<p class="hoverable social_icon"><i class="fas fa-paper-plane"></i></p>
 				</button>
 			</div>
