updating videos for mobile

--- a/index.html
+++ b/index.html
@@ -62,36 +62,46 @@
 
 		<div class="caroussel_wrapper">
 			<div class="main-carousel">
-			  <div class="carousel-cell cell1" onclick="link('https://www.instagram.com/ar/2669005600055612')">
-				  <video playsinline autoplay muted loop>
-				  	<source src="img/duskus.webm" type="video/webm">
+			  <div class="carousel-cell cell1" onclick="link('https://www.instagram.com/ar/165717681747207')">
+				  <video playsinline autoplay muted loop poster="videos/posters/san_find_your_way.png">
+				  	<source src="videos/webm/san_find_your_way.webm" type="video/webm">
+					<source src="videos/h264/san_find_your_way.mp4" type="video/mp4">
 				  </video>
 			  </div>
-			  <div class="carousel-cell cell2">
-				  <video playsinline autoplay muted loop>
-				  	<source src="img/san_holo_light.webm" type="video/webm">
+			  <div class="carousel-cell cell2" onclick="link('https://www.instagram.com/ar/1098681613936028')">
+				  <video playsinline autoplay muted loop poster="videos/posters/outre_tombe.png">
+				  	<source src="videos/webm/outre_tombe.webm" type="video/webm">
+					<source src="videos/h264/outre_tombe.mp4" type="video/mp4">
 				  </video>
 			  </div>
-			  <div class="carousel-cell cell3"
-			  onclick="link('https://www.instagram.com/ar/2661651397416055')">
-				  <video playsinline autoplay muted loop>
-				  	<source src="img/san_holo_vibrant.webm" type="video/webm">
+			  <div class="carousel-cell cell3" onclick="link('https://www.instagram.com/ar/2661651397416055')">
+				  <video playsinline autoplay muted loop poster="videos/posters/san_vibrant_lottery.png">
+				  	<source src="videos/webm/san_vibrant_lottery.webm" type="video/webm">
+					<source src="videos/h264/san_vibrant_lottery.mp4" type="video/mp4">
 				  </video>
 			  </div>
 			  <div class="carousel-cell cell4" onclick="link('https://www.instagram.com/ar/728204517718936')">
-				  <video playsinline autoplay muted loop>
-				  	<source src="img/block_mirror.webm" type="video/webm">
+				  <video playsinline autoplay muted loop poster="videos/posters/black_mirror.png">
+				  	<source src="videos/webm/black_mirror.webm" type="video/webm">
+					<source src="videos/h264/black_mirror.mp4" type="video/mp4">
 				  </video>
 			  </div>
 			  <div class="carousel-cell cell5" onclick="link('https://www.instagram.com/ar/809351166552969')">
-				  <video playsinline autoplay muted loop>
-				  	<source src="img/bellecour_choukar.webm" type="video/webm">
+				  <video playsinline autoplay muted loop poster="videos/posters/bellecour.png">
+				  	<source src="videos/webm/bellecour.webm" type="video/webm">
+					<source src="videos/h264/bellecour.mp4" type="video/mp4">
 				  </video>
 			  </div>
-			  <div class="carousel-cell cell6" onclick="link('https://www.instagram.com/ar/809351166552969')">
-				  <video playsinline autoplay muted loop>
-				  	<source src="videos/webm/san_find_your_way.webm" type="video/webm">
-					<source src="videos/h264/san_find_your_way.mp4" type="video/mp4">
+			  <div class="carousel-cell cell6" onclick="link('https://www.instagram.com/ar/226826272192746')">
+				  <video playsinline autoplay muted loop poster="videos/posters/san_bbuok.png">
+				  	<source src="videos/webm/san_bbuok.webm" type="video/webm">
+					<source src="videos/h264/san_bbuok.mp4" type="video/mp4">
+				  </video>
+			  </div>
+			  <div class="carousel-cell cell1" onclick="link('https://www.instagram.com/ar/2669005600055612')">
+				  <video playsinline autoplay muted loop poster="videos/posters/duskus_rising.png">
+				  	<source src="videos/webm/duskus_rising.webm" type="video/webm">
+					<source src="videos/h264/duskus_rising.mp4" type="video/mp4">
 				  </video>
 			  </div>
 			
